--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,56 +1,18 @@
-# Dependency directories
-node_modules/
-.   yarn/
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build output
-build/
-dist/
-
-# Coverage directory used by testing tools like Jest
-coverage/
-
-# Debugger logs
+!**/glob-import/dir/node_modules
 .DS_Store
-.vscode/
-.idea/
+.idea
+.pnpm-store
+*.cpuprofile
+*.local
 *.log
-
-# Production files
-/production/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# Optional npm cache directory
-.npm/
-
-# Optional eslint cache
+/.vscode/
+/docs/.vitepress/cache
+/packages/vite/LICENSE
+dist
+dist-ssr
+explorations
+node_modules
+playground-temp
+temp
+TODOs.md
 .eslintcache
-
-# Optional REACT Cache/Temporary files
-.react/
-
-# Ignore the lock files
-package-lock.json
-yarn.lock
-
-# Ignore all the generated files by Jest
-jest/
-
-# macOS system files
-.DS_Store
-
-# Windows system files
-Thumbs.db
